--- a/pages/billingManagement/index.wxml
+++ b/pages/billingManagement/index.wxml
@@ -9,7 +9,7 @@
 	<!-- <view class="bgColor03d0 colorWhite mt10 pt10 pb10" wx:for="{{tabList}}" bindtap='toOtherBillingPage' data-item="{{item}}">
 		{{item.name}}
 	</view> -->
-	<view class="card" wx:for="{{tabList}}" bindtap='toOtherBillingPage' data-item="{{item}}">
+	<view class="card" wx:for="{{tabList}}" wx:if="{{item.show}}" bindtap='toOtherBillingPage' data-item="{{item}}">
 		{{item.name}}
 	</view>
 	<view class="vh5"></view>
