--- a/pages/reimbursementManageDetail/reimbursementManageDetail.wxml
+++ b/pages/reimbursementManageDetail/reimbursementManageDetail.wxml
@@ -60,8 +60,8 @@
 	<view wx:if="{{isLogin}}">
 		<view class="mt20 submit" style="position: fixed;bottom:3%;left:50%;transform: translateX(-50%);">
 			<view class="flex jcsa">
-				<van-button type="primary" size="small" bindtap="update">修改报销单</van-button>
-				<van-button style="margin-left: 20px;" type="primary" size="small" bindtap="openCheck">审核报销单</van-button>
+				<van-button wx:if="{{hasCreateModule}}" type="primary" size="small" bindtap="update">修改报销单</van-button>
+				<van-button class="{{hasCreateModule?'ml20':''}}" type="primary" size="small" bindtap="openCheck">审核报销单</van-button>
 			</view>
 		</view>
 	</view>
