--- a/pages/billingManagement/productionPlan/productionPlan.wxml
+++ b/pages/billingManagement/productionPlan/productionPlan.wxml
@@ -6,9 +6,32 @@
 		</view>
 	</nav-content>
 
-	<view class="flex bgColorWhite">
-		<l-input class="w90" bind:lininput="changeParams" value="{{code}}" placeholder="计划单号/订单号" hide-label="{{true}}" />
-		<van-icon class="w10" name="more-o" bindtap="openPopup" />
+	<view class="bgColorWhite">
+		<view class="flex">
+			<l-input class="w90" bind:lininput="changeParams" value="{{code}}" placeholder="计划单号/订单号" hide-label="{{true}}" />
+			<van-icon class="w10" name="more-o" bindtap="openPopup" />
+		</view>
+
+		<view class="flex jcsb" style="padding: 10px;">
+			<view class="w25">
+				<view>计划数</view>
+				<view class="mt10 color03d0 bold">{{additional.total_number || 0}} 万件</view>
+			</view>
+			<view class="w25">
+				<view>计划金额</view>
+				<view class="mt10 color03d0 bold">
+					{{additional.total_price || 0}} 万元
+				</view>
+			</view>
+			<view class="w25">
+				<view>完成数</view>
+				<view class="mt10 color03d0 bold">{{ additional.total_real_number || 0 }} 万件</view>
+			</view>
+			<view class="w25">
+				<view>完成金额</view>
+				<view class="mt10 color03d0 bold">{{ additional.total_real_price || 0 }} 万元</view>
+			</view>
+		</view>
 	</view>
 
 	<scroll-view scroll-y class="vh80" bindscrolltolower="reqOrder">
