--- a/pages/billingManagement/rawMaterialPlan/rawMaterialPlan.wxml
+++ b/pages/billingManagement/rawMaterialPlan/rawMaterialPlan.wxml
@@ -6,9 +6,27 @@
 		</view>
 	</nav-content>
 
-	<view class="flex bgColorWhite">
-		<l-input class="w90" bind:lininput="changeParams" value="{{code}}" placeholder="计划单号/订单号" hide-label="{{true}}" />
-		<van-icon class="w10" name="more-o" bindtap="openPopup" />
+	<view class="bgColorWhite">
+		<view class="flex">
+			<l-input class="w90" bind:lininput="changeParams" value="{{code}}" placeholder="计划单号/订单号" hide-label="{{true}}" />
+			<van-icon class="w10" name="more-o" bindtap="openPopup" />
+		</view>
+		<view class="flex jcsb" style="padding: 10px;">
+			<view class="w33">
+				<view>生产数</view>
+				<view class="mt10 color03d0 bold">{{additional.total_production_number || 0}} 万件</view>
+			</view>
+			<view class="w33">
+				<view>原料数</view>
+				<view class="mt10 color03d0 bold">
+					{{additional.total_material_number || 0}} 吨或千米 
+				</view>
+			</view>
+			<view class="w33">
+				<view>平均损耗</view>
+				<view class="mt10 color03d0 bold">{{ additional.pre_loss || 0 }} %</view>
+			</view>
+		</view>
 	</view>
 
 	<scroll-view scroll-y class="vh80" bindscrolltolower="reqOrder">
