--- a/pages/index/index.scss
+++ b/pages/index/index.scss
@@ -1,6 +1,13 @@
 /**index.wxss**/
 #index {
-  padding-bottom: 60px;
+	padding-bottom: 130px;
+	position: fixed;
+  left: 0px;
+  top: 0px;
+  height: 100vh;
+  width: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
 
   .userinfo {
     display: flex;
@@ -33,7 +40,8 @@
   }
 
   .card {
-    width: 45%;
+		width: 45%;
+		margin-top: 10px;
 		margin-right: 0;
 		margin-left: 0;
 	}
