--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -5,9 +5,9 @@
 			<view class="vw100 tc vh4">首页</view>
 		</view>
 	</nav-content>
-	<view class="flex flexWarp jcsa">
-		<view wx:if="{{isLogin}}" class="card tc" wx:for="{{list}}" wx:for-item="item" wx:key="item" wx:for-index="index"
-			data-src="{{item.src}}" bindtap="toDetailPage">
+	<view class="flex flexWarp jcsb pl10 pr10">
+		<view wx:if="{{isLogin}}" wx:if="{{item.show}}" class="card tc" wx:for="{{list}}" wx:for-item="item" wx:key="item" wx:for-index="index"
+			data-src="{{item.src}}" bindtap="toDetailPage" style="width: calc(50vw - 15px);">
 			<view class="vh8">
 				<image src="{{item.icon}}" style="width: 7vh;height: 7vh;"></image>
 			</view>
@@ -32,18 +32,18 @@
 
 	<view class="tab-bar" style="overflow:unset">
 		<view class="tab-bar-border"></view>
-		<cover-view class="tab-bar-item">
+		<view class="tab-bar-item">
 			<cover-image src="https://file.zwyknit.com/%E9%A6%96%E9%A1%B5-01.png"></cover-image>
 			<cover-view class="color27A2">首页</cover-view>
-		</cover-view>
+		</view>
 		<view class="tab-bar-item" style="transform: translateY(-50%);" bindtap="GetSandCode">
 			<van-icon name="scan" size="50px" class="color91"
 				style="background-color: white; border-top: 1px solid rgba(0, 0, 0, 0.33);padding: 10px; border-radius: 500px;" />
 		</view>
-		<cover-view class="tab-bar-item" bindtap="toManage">
+		<view class="tab-bar-item" bindtap="toManage">
 			<cover-image src="https://file.zwyknit.com/%E7%AE%A1%E7%90%86%EF%BC%88%E7%81%B0%E8%89%B2%EF%BC%89-01.png">
 			</cover-image>
 			<cover-view class="color91">管理</cover-view>
-		</cover-view>
+		</view>
 	</view>
 </view>
