--- a/pages/manage/manage.scss
+++ b/pages/manage/manage.scss
@@ -3,6 +3,17 @@
   height: 100vh;
 }
 
+#manage {
+  padding-bottom: 130px;
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  height: 100vh;
+  width: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
 .manage-list {
   height: 90px;
 }
@@ -17,7 +28,7 @@
   border-radius: 5px;
 }
 
-.image{
+.image {
   overflow: hidden;
   height: 120rpx;
   width: 120rpx;
@@ -25,46 +36,52 @@
 }
 
 @keyframes example {
-  0%   {transform: scale(0.8);}
-  50%  {transform: scale(1);}
-  100% {transform: scale(0.8);}
+  0% {
+    transform: scale(0.8);
+  }
+  50% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0.8);
+  }
 }
 
 .tab-bar {
-	position: fixed;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	height: 50px;
-	background: white;
-	padding-top: 10px;
-	display: flex;
-	padding-bottom: env(safe-area-inset-bottom);
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 50px;
+  background: white;
+  padding-top: 10px;
+  display: flex;
+  padding-bottom: env(safe-area-inset-bottom);
 }
 .tab-bar-border {
-	background-color: rgba(0, 0, 0, 0.33);
-	position: absolute;
-	left: 0;
-	top: 0;
-	width: 100%;
-	height: 1px;
-	transform: scaleY(0.5);
+  background-color: rgba(0, 0, 0, 0.33);
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 1px;
+  transform: scaleY(0.5);
 }
 
 .tab-bar-item {
-	flex: 1;
-	text-align: center;
-	display: flex;
-	justify-content:space-around;
-	align-items: center;
-	flex-direction: column;
+  flex: 1;
+  text-align: center;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
 }
 
 .tab-bar-item cover-image {
-	width: 27px;
-	height: 27px;
+  width: 27px;
+  height: 27px;
 }
 
 .tab-bar-item cover-view {
-	font-size: 30rpx;
+  font-size: 30rpx;
 }
