--- a/pages/manage/manage.wxml
+++ b/pages/manage/manage.wxml
@@ -1,5 +1,5 @@
 <!--manage.wxml-->
-<view class="container noPad">
+<view class="container noPad" id='manage'>
 	<nav-content showBack="{{false}}" showHome="{{false}}">
 		<view slot="after">
 			<view class="vw100 tc vh4">管理</view>
