--- a/pages/orderDetail/orderDetail.wxml
+++ b/pages/orderDetail/orderDetail.wxml
@@ -68,15 +68,14 @@
 
 	<view class="card">
 		<view class="title">产品信息</view>
-		<view wx:for="{{productList}}" wx:for-item="item" wx:key="item" wx:for-index="index" bindtap='showDetailPro'
-			data-item="{{item}}">
+		<view wx:for="{{productList}}" wx:for-item="item" wx:key="item" wx:for-index="index">
 			<view class="flex mb20">
 				<view class="w30">
 					<van-image width="100" height="100" fit="cover"
 						src="{{item.image_data[0]||'https://file.zwyknit.com/%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20220211103236.png'}}" />
 				</view>
 				<view class="w70 flex fdc jcsb pl10">
-					<view>
+					<view bindtap='showDetailPro' data-item="{{item}}">
 						<view class="color27A2">{{item.product_code}}</view>
 						<view>{{item.name}}</view>
 					</view>
