--- a/pages/quotedPrice/quotedPrice.wxml
+++ b/pages/quotedPrice/quotedPrice.wxml
@@ -47,7 +47,7 @@
 			<van-button type="primary" size="small" bindtap="toLogin">登录</van-button>
 		</view>
 	</view>
-	<view wx:if="{{isLogin}}">
+	<view wx:if="{{isLogin && hasCreateModule}}">
 		<view class="mt20 submit" style="position: fixed;bottom:5%;left:50%;transform: translateX(-50%);">
 			<van-button type="primary" size="small" bindtap="toCreate">创建报价单</van-button>
 		</view>
