--- a/pages/reimbursementManage/reimbursementManage.wxml
+++ b/pages/reimbursementManage/reimbursementManage.wxml
@@ -44,7 +44,7 @@
 			<van-button type="primary" size="small" bindtap="toLogin">登录</van-button>
 		</view>
 	</view>
-	<view wx:if="{{isLogin}}">
+	<view wx:if="{{isLogin && hasCreateModule}}">
 		<view class="mt20 submit" style="position: fixed;bottom:3%;left:50%;transform: translateX(-50%);">
 			<van-button type="primary" size="small" bindtap="toCreate">创建报销单</van-button>
 		</view>
