单据管理审核状态点击查看

--- a/pages/billingManagement/packingOrder/packingOrderDetail.wxml
+++ b/pages/billingManagement/packingOrder/packingOrderDetail.wxml
@@ -43,8 +43,8 @@
 			</view>
 		</view>
 		<van-image wx:if="{{info.is_check !== 4 && info.is_check !== 3}}" style="position: absolute;right:0;top:0%"
-			width="130" height="94" src="{{statusImageList[info.is_check]}}" />
-		<view wx:else class="colorRed bold" style="position: absolute;right:5%;top:5%">单据异常</view>
+			width="130" height="94" src="{{statusImageList[info.is_check]}}" bindtap="openCheckDetail" />
+		<view wx:else class="colorRed bold" style="position: absolute;right:5%;top:5%" bindtap="openCheckDetail">单据异常</view>
 	</view>
 
 	<!-- 产品信息 -->
@@ -148,4 +148,5 @@
 	</l-mask>
 
 	<l-message content="{{content}}" />
+	<check-detail show="{{showCheckDetail}}" pid="{{id}}" is_check="{{info.is_check}}" check_type="11" bind:cancel="closeCheckDetail"></check-detail>
 </view>
