--- a/pages/billingManagement/transportationDeliveryOrder/transportationDeliveryOrderDetail.wxml
+++ b/pages/billingManagement/transportationDeliveryOrder/transportationDeliveryOrderDetail.wxml
@@ -39,8 +39,8 @@
 			</view>
 		</view>
 		<van-image wx:if="{{info.is_check !== 4 && info.is_check !== 3}}" style="position: absolute;right:0;top:0%"
-			width="130" height="94" src="{{statusImageList[info.is_check]}}" />
-		<view wx:else class="colorRed bold" style="position: absolute;right:5%;top:5%">单据异常</view>
+			width="130" height="94" src="{{statusImageList[info.is_check]}}" bindtap="openCheckDetail"/>
+		<view wx:else class="colorRed bold" style="position: absolute;right:5%;top:5%" bindtap="openCheckDetail">单据异常</view>
 	</view>
 
 	<!-- 运单信息 -->
@@ -253,4 +253,5 @@
 	</van-popup>
 	<t-image-viewer visible="{{showImage}}" background-color='rgba(0, 0, 0, 0.6)' images="{{productInfo.image_data}}"
 		bind:close="closeShowImage" />
+	<check-detail show="{{showCheckDetail}}" pid="{{id}}" is_check="{{info.is_check}}" check_type="13" bind:cancel="closeCheckDetail"></check-detail>
 </view>
