--- a/pages/billingManagement/auxiliaryMaterialPurchaseOrder/auxiliaryMaterialPurchaseOrderDetail.wxml
+++ b/pages/billingManagement/auxiliaryMaterialPurchaseOrder/auxiliaryMaterialPurchaseOrderDetail.wxml
@@ -57,8 +57,8 @@
 			</view>
 		</view>
 		<van-image wx:if="{{info.is_check !== 4 && info.is_check !== 3}}" style="position: absolute;right:0;top:0%"
-			width="130" height="94" src="{{statusImageList[info.is_check]}}" />
-		<view wx:else class="colorRed bold" style="position: absolute;right:5%;top:5%">单据异常</view>
+			width="130" height="94" src="{{statusImageList[info.is_check]}}" bindtap="openCheckDetail" />
+		<view wx:else class="colorRed bold" style="position: absolute;right:5%;top:5%" bindtap="openCheckDetail">单据异常</view>
 	</view>
 
 	<!-- 订购信息 -->
@@ -147,4 +147,5 @@
 	</l-mask>
 
 	<l-message content="{{content}}" />
+	<check-detail show="{{showCheckDetail}}" pid="{{id}}" is_check="{{info.is_check}}" check_type="2" bind:cancel="closeCheckDetail"></check-detail>
 </view>
