--- a/pages/billingManagement/inspectionReceiptDocument/inspectionReceiptDocumentDetail.wxml
+++ b/pages/billingManagement/inspectionReceiptDocument/inspectionReceiptDocumentDetail.wxml
@@ -40,8 +40,8 @@
 		</view>
 		<van-image wx:if="{{info.time_data[0].is_check !== 4 && info.time_data[0].is_check !== 3}}"
 			style="position: absolute;right:0;top:2%" width="130" height="94"
-			src="{{statusImageList[info.time_data[0].is_check]}}" />
-		<view wx:else class="colorRed bold" style="position: absolute;right:5%;top:5%">单据异常</view>
+			src="{{statusImageList[info.time_data[0].is_check]}}"  bindtap="openCheckDetail"/>
+		<view wx:else class="colorRed bold" style="position: absolute;right:5%;top:5%" bindtap="openCheckDetail">单据异常</view>
 	</view>
 
 	<!-- 计划加工 -->
@@ -407,4 +407,5 @@
 	</l-mask>
 
 	<l-message content="{{content}}" />
+	<check-detail show="{{showCheckDetail}}" pid="{{id}}" is_check="{{info.is_check}}" check_type="19" bind:cancel="closeCheckDetail"></check-detail>
 </view>
