--- a/pages/billingManagement/productionPlan/productionPlanDetail.wxml
+++ b/pages/billingManagement/productionPlan/productionPlanDetail.wxml
@@ -84,9 +84,9 @@
 			</view>
 		</view>
 		<van-image wx:if="{{info.is_check !== 4 && info.is_check !== 3}}" style="position: absolute;right:0;top:0%"
-			width="130" height="94" src="{{statusImageList[info.is_check]}}" />
+			width="130" height="94" src="{{statusImageList[info.is_check]}}" bindtap="openCheckDetail"/>
 		<van-image wx:else style="position: absolute;right:2%;top:2%" width="90" height="90"
-			src="{{statusImageList[info.is_check]}}" />
+			src="{{statusImageList[info.is_check]}}" bindtap="openCheckDetail"/>
 	</view>
 
 	<!-- 产品信息 -->
@@ -304,4 +304,5 @@
 	</van-popup>
 	<t-image-viewer visible="{{showImage1}}" background-color='rgba(0, 0, 0, 0.6)' images="{{productInfo.image_data}}"
 		bind:close="closeShowImage" />
+	<check-detail show="{{showCheckDetail}}" pid="{{id}}" is_check="{{info.is_check}}" check_type="4" bind:cancel="closeCheckDetail"></check-detail>
 </view>
