--- a/pages/billingManagement/rawMaterialPlan/rawMaterialPlanDetail.wxml
+++ b/pages/billingManagement/rawMaterialPlan/rawMaterialPlanDetail.wxml
@@ -45,9 +45,9 @@
 			</view>
 		</view>
 		<van-image wx:if="{{info.is_check !== 4 && info.is_check !== 3}}" style="position: absolute;right:0;top:0%"
-			width="130" height="94" src="{{statusImageList[info.is_check]}}" />
+			width="130" height="94" src="{{statusImageList[info.is_check]}}" bindtap="openCheckDetail"/>
 		<van-image wx:else style="position: absolute;right:2%;top:2%" width="90" height="90"
-			src="{{statusImageList[info.is_check]}}" />
+			src="{{statusImageList[info.is_check]}}" bindtap="openCheckDetail"/>
 	</view>
 
 	<!-- 产品信息 -->
@@ -232,7 +232,8 @@
 				<view class="flex mt10">
 					<view class="w30 color6">大身尺码</view>
 					<view class="w70">
-						<view class="mt10" wx:for="{{productInfo.size_data}}">{{index+1}}. {{item.name}} {{item.weight}}g {{item.size_info}}
+						<view class="mt10" wx:for="{{productInfo.size_data}}">{{index+1}}. {{item.name}} {{item.weight}}g
+							{{item.size_info}}
 						</view>
 					</view>
 				</view>
@@ -251,4 +252,5 @@
 	</van-popup>
 	<t-image-viewer visible="{{showImage}}" background-color='rgba(0, 0, 0, 0.6)' images="{{productInfo.image_data}}"
 		bind:close="closeShowImage" />
+	<check-detail show="{{showCheckDetail}}" pid="{{id}}" is_check="{{info.is_check}}" check_type="9" bind:cancel="closeCheckDetail"></check-detail>
 </view>
