--- a/pages/billingManagement/rawMaterialTransferOrder/rawMaterialTransferOrderDetail.scss
+++ b/pages/billingManagement/rawMaterialTransferOrder/rawMaterialTransferOrderDetail.scss
@@ -17,5 +17,10 @@
     border-top: 0px;
     border-left: 0px;
     border-right: 0px;
+	}
+	
+	.van-popup {
+    width: 90vw;
+    padding: 10px;
   }
 }
