--- a/pages/billingManagement/rawMaterialTransferOrder/rawMaterialTransferOrderDetail.wxml
+++ b/pages/billingManagement/rawMaterialTransferOrder/rawMaterialTransferOrderDetail.wxml
@@ -1,5 +1,5 @@
 <!--pages/billingManagement/rawMaterialTransferOrder/rawMaterialTransferOrderDetail.wxml-->
-<view id="rawMaterialPurchaseOrderDetail">
+<view id="rawMaterialTransferOrderDetail">
 	<nav-content>
 		<view slot="after">
 			<view>原料调取单详情</view>
@@ -57,9 +57,9 @@
 			</view>
 		</view>
 		<van-image wx:if="{{info.is_check !== 4 && info.is_check !== 3}}" style="position: absolute;right:0;top:0%"
-			width="130" height="94" src="{{statusImageList[info.is_check]}}" />
+			width="130" height="94" src="{{statusImageList[info.is_check]}}" bindtap="openCheckDetail"/>
 		<van-image wx:else style="position: absolute;right:2%;top:2%" width="90" height="90"
-			src="{{statusImageList[info.is_check]}}" />
+			src="{{statusImageList[info.is_check]}}" bindtap="openCheckDetail"/>
 	</view>
 
 	<!-- 原料信息 -->
@@ -164,4 +164,5 @@
 	</l-mask>
 
 	<l-message content="{{content}}" />
+	<check-detail show="{{showCheckDetail}}" pid="{{id}}" is_check="{{info.is_check}}" check_type="6" bind:cancel="closeCheckDetail"></check-detail>
 </view>
