--- a/pages/billingManagement/workshopSettlementLog/workshopSettlementLogDetail.wxml
+++ b/pages/billingManagement/workshopSettlementLog/workshopSettlementLogDetail.wxml
@@ -27,8 +27,8 @@
 			</view>
 		</view>
 		<van-image wx:if="{{info.is_check !== 4 && info.is_check !== 3}}" style="position: absolute;right:0;top:0%"
-			width="130" height="94" src="{{statusImageList[info.is_check]}}" />
-		<view wx:else class="colorRed bold" style="position: absolute;right:5%;top:5%">单据异常</view>
+			width="130" height="94" src="{{statusImageList[info.is_check]}}" bindtap="openCheckDetail"/>
+		<view wx:else class="colorRed bold" style="position: absolute;right:5%;top:5%" bindtap="openCheckDetail">单据异常</view>
 	</view>
 
 	<view class="card fz28">
@@ -217,4 +217,5 @@
 		<view class="line"></view>
 		<view class="tc" bindtap="closePro">关闭</view>
 	</van-popup>
+	<check-detail show="{{showCheckDetail}}" pid="{{id}}" is_check="{{info.is_check}}" check_type="14" bind:cancel="closeCheckDetail"></check-detail>
 </view>
