--- a/pages/billingManagement/transportationDeliveryOrder/transportationDeliveryOrder.wxml
+++ b/pages/billingManagement/transportationDeliveryOrder/transportationDeliveryOrder.wxml
@@ -6,9 +6,9 @@
 		</view>
 	</nav-content>
 
-	<view class="flex bgColorWhite">
+	<view class="flex bgColorWhite aic">
 		<l-input class="w90" bind:lininput="changeParams" value="{{code}}" placeholder="运输单号/订单号" hide-label="{{true}}" />
-		<van-icon class="w10" name="more-o" bindtap="openPopup" />
+		<view class="w10 color27A2" bindtap="openPopup">筛选</view>
 	</view>
 
 	<scroll-view scroll-y class="vh80" bindscrolltolower="reqOrder">
