--- a/pages/billingManagement/rawMaterialTransferOrder/rawMaterialTransferOrder.wxml
+++ b/pages/billingManagement/rawMaterialTransferOrder/rawMaterialTransferOrder.wxml
@@ -7,9 +7,9 @@
 	</nav-content>
 
 	<view class="bgColorWhite">
-		<view class="flex">
+		<view class="flex aic">
 			<l-input class="w90" bind:lininput="changeParams" value="{{code}}" placeholder="调取单号/订单号" hide-label="{{true}}" />
-			<van-icon class="w10" name="more-o" bindtap="openPopup" />
+			<view class="w10 color27A2" bindtap="openPopup">筛选</view>
 		</view>
 		<view class="flex jcsb" style="padding: 10px;">
 			<view class="w25">
@@ -116,6 +116,18 @@
 				<view class="flex">
 					<radio-group class="radio-label flex flexWarp" bindchange="bindPickerChangeAge" data-type="group">
 						<label class="radio" wx:for="{{groupList}}" wx:key="key">
+							<view>
+								<view class="label">{{item.text}}</view>
+								<radio value="{{index}}" checked="{{item.checked}}" />
+							</view>
+						</label>
+					</radio-group>
+				</view>
+				<view class="line"></view>
+				<view>订单类型：</view>
+				<view class="flex">
+					<radio-group class="radio-label flex flexWarp" bindchange="bindPickerChangeAge" data-type="order_type">
+						<label class="radio" wx:for="{{orderType}}" wx:key="key">
 							<view>
 								<view class="label">{{item.text}}</view>
 								<radio value="{{index}}" checked="{{item.checked}}" />
